Bug 660371: report regexp syntax errors as compiler errors when appropriate, r=cdleary